tests/baselines/reference/FunctionPropertyAssignments3_es6.errors.txt
FunctionPropertyAssignments3_es6.ts(1,12): error TS1003: Identifier expected.


==== FunctionPropertyAssignments3_es6.ts (1 errors) ====
    var v = { *{ } }
               ~
!!! error TS1003: Identifier expected.